# sactor

./: Cargo.toml  flake.nix
crates/sactor/: Cargo.toml
crates/sactor-macros/: Cargo.toml
crates/sactor-macros/src/: lib.rs
crates/sactor/examples/: error.rs  hello.rs  timer.rs
crates/sactor/src/: error.rs  lib.rs
