[package]
name = "sactor-macros"

description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
manyhow = "0.11.4"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.115", features = ["full"] }
