[package]
name = "sactor"

description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
futures = "0.3.32"
sactor-macros = { version = "0.1.2", path = "../sactor-macros" }

[dev-dependencies]
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
